# student-information-system

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: -title-.md  issue-template.md
.github/TEMPLATES/: review-template.yml
.github/templates/: example-commit-message.md  pull-request-template.md  review-template.md
.github/workflows/: ci.yml  docker-build.yml
docker/: Dockerfile  Dockerfile.db  docker.env  init.sql
docs/: CI_PIPELINE_RESEARCH.md  CONTRIBUTING.md  DOCKER_REQUIREMENTS.md  INSTALL.md  MANUAL.md
include/: database.h  logger.h  student.h  ui.h
src/: Main.cpp  database.cpp  logger.cpp  student.cpp  ui.cpp
student_system/src/: database.cpp  student.cpp
tests/: test_crud.cpp  test_db_connection.cpp  test_student.cpp
